testdata/e2e/examples/timeout/chainsaw-test.yml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: timeout
spec:
  steps:
  - try:
    - script:
        content: sleep 5
        timeout: 3s
        check:
          ($error != null): true
